Update go docs and prepare unit testing
