# server/docs/swagger.yaml
@@ -56,13 +56,40 @@ definitions:
       room:
         $ref: '#/definitions/model.Room'
     type: object
+  handlers.Login.LoginInput:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  handlers.Login.UserData:
+    properties:
+      email:
+        type: string
+      uid:
+        type: integer
+      username:
+        type: string
+    type: object
   handlers.PayBill.PayBillInput:
     properties:
+      billId:
+        type: string
       paidOn:
         type: string
       payee:
         type: string
       payer:
+        type: string
+    type: object
+  handlers.SignUp.NewUser:
+    properties:
+      email:
+        type: string
+      id:
+        type: integer
+      username:
         type: string
     type: object
   handlers.UpdateUser.UpdateUserInput:
@@ -151,6 +178,60 @@ info:
   title: JustJio API
   version: "1.0"
 paths:
+  /auth:
+    post:
+      consumes:
+      - application/json
+      description: Authenticates the user
+      parameters:
+      - description: Login Credentials
+        in: body
+        name: loginInput
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.Login.LoginInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.Login.UserData'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: Log a user into the application
+      tags:
+      - auth
+  /auth/signup:
+    post:
+      consumes:
+      - application/json
+      description: Create an account for a user
+      parameters:
+      - description: New User
+        in: body
+        name: newUser
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.SignUp.NewUser'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Signs up a user
+      tags:
+      - auth
   /bills:
     get:
       consumes:
